--- a/src/index.scss
+++ b/src/index.scss
@@ -1,104 +1,115 @@
 //---------------------------------------------
-// Side-bar menu styles
+// Side-menu styles
 //---------------------------------------------
-.buildup-container {
+div.buildup-sidemenu {
 	box-sizing: border-box;
-	margin: 0 40px 24px 40px;
+	margin: 0 18px 24px 40px;
 
-	h4.buildup-container-header {
-		font-size: 15px;
-		font-weight: 400;
-		margin-top: 16px;
-		margin-bottom: 11px;
-		cursor: pointer;
-
-		&:first-child {
-			margin-top: 0;
+	div.section {
+		margin-bottom: 14px;
+		&:last-child {
+			margin-bottom: 0;
 		}
 
-		span.buildup-container-header-disclosure-sign {
-			color: #999999;
-		}
-	}
+		h1.section-title {
+			font-size: 15px;
+			font-weight: 400;
+			color: #49535E;
 
-	.buildup-container-disclosure-closed {
-		display: none;
-	}
+			cursor: pointer;
 
-	ul.buildup-container-docs {
-		li.buildup-container-doc {
-			overflow: hidden;
-			text-overflow: ellipsis;
-			white-space: nowrap;
-			font-weight: 300;
-			font-size: 12px;
-			margin-bottom: 4px;
+			margin-top: 16px;
+			margin-bottom: 9px;
+			&:first-child {
+				margin-top: 0;
+			}
 
-			a {
-				color: #7b8994;
-				&:hover {
-					color: #0070cc;
-				}
-
-				span.buildup-container-doc-favorited {
-				}
-
-				span.buildup-container-doc-unfavorited {
-					opacity: 0.16;
+			img {
+				display: none;
+			}
+			&.section-hide {
+				img {
+					display: inline;
 				}
 			}
 		}
 
-		li.buildup-container-doc-important {
-			font-weight: 500;
-
-			a {
-				color: #1425a5;
+		ul {
+			&.section-hide {
+				display: none;
 			}
-		}
 
-		li.buildup-container-doc-unimportant {
-			opacity: 0.3;
-		}
-
-		li.buildup-container-doc-selected {
-			font-weight: 600;
-
-			a {
-				color: #363daf;
-			}
-		}
-	}
-
-	ul.buildup-container-folders {
-		li.buildup-container-folder {
-			margin-bottom: 10px;
-
-			h5 {
-				font-size: 13px;
-				font-weight: 400;
-				margin-bottom: 6px;
+			li {
+				white-space: nowrap;
+				overflow: hidden;
+				text-overflow: ellipsis;
 
 				a {
-					color: #68747d;
-					&:hover {
-						color: #0070cc;
+					display: inline-block;
+					text-overflow: ellipsis;
+					overflow: hidden;
+					color: #7A8995;
+
+					&:hover, &:active {
+						color: #000000;
 					}
 				}
-			}
-		}
 
-		li.buildup-container-folder-important {
-			h5 {
-				a {
-					color: #1425a5;
+				svg {
+					display: inline;
+
+					circle {
+						fill: #E2E8EE;
+						stroke: #D6DDE4;
+						stroke-width: 2px;
+					}
+
+					path {
+						fill: #ffffff;
+					}
 				}
-			}
-		}
 
-		li.buildup-container-folder-unimportant {
-			h5 {
-				opacity: 0.3;
+				&:first-child {
+					margin-top: 0;
+				}
+
+				&.item-group {
+					font-size: 13px;
+					font-weight: 400;
+
+					margin-top: 5px;
+					margin-bottom: 7px;
+
+					a {
+						width: 231px;
+					}
+
+					svg {
+						vertical-align: 4px;
+					}
+				}
+
+				&.item {
+					font-size: 12px;
+					font-weight: 300;
+
+					height: 20px;
+					
+					margin-bottom: 2px;
+
+					a {
+						width: 210px;
+						vertical-align: -3px;
+					}
+				}
+
+				&.item-unimportant {
+					opacity: 0.3;
+				}
+
+				&.item-current {
+					color: #007ee5;
+				}
 			}
 		}
 	}
